--- a/project5/gallery.html
+++ b/project5/gallery.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="./index.html">gome</a>
+            <a href="./index.html">home</a>
             <a href="./gallery.html">gallery</a>
             <a href="./contact.html">contact</a>
         </nav>
