final- floating picture

--- a/project5/index.html
+++ b/project5/index.html
@@ -18,17 +18,11 @@
     </header>
     <h1>homepage</h1>
     <main>
-        <div class="box-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, itaque!</div>
-        <div class="box-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, modi!</div>
-        <div class="box-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. In atque ab officiis possimus, consequatur, voluptatibus, perspiciatis vel molestias eaque dolore fuga! Animi, dolorum veritatis iste consequuntur doloremque deleniti, voluptates, quis sit vitae ad vel dolor modi architecto ab fugit vero. Et minus doloremque incidunt praesentium? Reprehenderit et eos at aperiam.</div>
-
-        <div class="container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quibusdam sint consectetur, magni itaque praesentium ducimus numquam modi facere veniam, blanditiis quod nostrum, eum eveniet nihil accusantium doloremque! Corrupti, cupiditate corporis! Neque unde commodi, exercitationem mollitia quam magni voluptatum porro, culpa ullam quisquam vero. At distinctio corporis doloribus blanditiis saepe ea numquam, facere aliquam eius assumenda corrupti. Repellendus numquam culpa molestiae sit accusantium, quia quam eius aliquid pariatur debitis consequatur voluptatum rerum itaque nisi aliquam molestias quas laudantium soluta magni illo accusamus libero? Sed labore incidunt nihil? Ad eos debitis aspernatur voluptas consequuntur nulla, obcaecati ea maxime laudantium consequatur quam.</p>
-        </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, soluta.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, reprehenderit!</p>
-        <a href="#">google</a>
-        <a href="123">facebook</a>
+        <section>
+            <!-- <img src="./assets/images/emoji.png" alt=""> -->
+            <img src="https://picsum.photos/400/200" class="image">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia a assumenda nostrum aperiam incidunt, quae rerum ad nemo, officiis voluptate porro impedit non placeat consectetur culpa. Iste veniam quasi cupiditate delectus ipsum aliquam perferendis ea vero voluptas voluptatibus ab aspernatur, rem odit distinctio. Quae voluptates officiis amet placeat ea deleniti.</p>
+        </section>
     </main>
     <footer></footer>
 </body>
